syntax = "proto3";

package proto;

service TransferService {
    rpc Download (DownloadRequest) returns (stream DownloadResponse) {};
    rpc Upload (stream UploadRequest) returns (UploadResponse) {};
}

message DownloadRequest {
    string name = 1;
}

message DownloadResponse {
    bytes data = 1;
}

message UploadRequest {
    string fileName = 1;
    bytes data = 2;
}

message UploadResponse {
    bool finished = 1;
    string fileHash = 2;
}
